<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="viewModel"
            type="com.hsnbyhn.moviebrowser.feature.moviedetail.MovieDetailViewModel"/>
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@color/c_323233"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/appbar_default_height"
            android:theme="@style/AppTheme.AppBarOverlay">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/movie_detail_toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:title="@{viewModel.movieTitle}"
                app:toolbarId="@+id/movie_detail_toolbar"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:contentScrim="?attr/colorPrimary">

                <ImageView
                    android:id="@+id/activity_movie_detail_imageview_backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/backdrop_image_default_height"
                    app:imageUrl="@{viewModel.movieBackdropPath}"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.7"/>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/movie_detail_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/AppTheme.PopupOverlay">

                </androidx.appcompat.widget.Toolbar>


            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView

            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:padding="@dimen/default_padding"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/movie_genre_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:dataGenre="@{viewModel.movieGenreList}"
                        android:clipToPadding="false"
                        android:scrollbars="horizontal"/>

                </LinearLayout>

                <LinearLayout
                    android:padding="@dimen/default_padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/layout_movie_detail_content_imageview_poster_path"
                        android:layout_width="wrap_content"
                        app:imageUrl="@{viewModel.moviePosterPath}"
                        android:layout_height="match_parent"
                        android:layout_marginRight="@dimen/default_margin"/>

                    <LinearLayout android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/margin_small"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:textColor="@color/colorWhite"
                                android:textStyle="bold"
                                android:text="@string/released"/>

                            <TextView
                                android:id="@+id/layout_movie_detail_content_textview_release_date"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:textColor="@color/colorWhite"
                                android:text="@{viewModel.movieReleaseDate}"
                                android:layout_gravity="end"/>

                        </LinearLayout>

                        <LinearLayout android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/margin_small"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:textColor="@color/colorWhite"
                                android:textStyle="bold"
                                android:text="@string/rate"/>

                            <TextView
                                android:id="@+id/activity_movie_detail_textview_rating"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:textColor="@color/colorWhite"
                                android:text="@{viewModel.movieRating}"
                                android:layout_gravity="end"/>

                        </LinearLayout>

                        <LinearLayout android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/margin_small"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:textColor="@color/colorWhite"
                                android:textStyle="bold"
                                android:text="@string/language"/>

                            <TextView
                                android:id="@+id/activity_movie_detail_textview_language"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:textColor="@color/colorWhite"
                                android:text="@{viewModel.movieLanguage}"
                                android:layout_gravity="end"/>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>
                <TextView
                    android:id="@+id/layout_movie_detail_content_textview_overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:layout_margin="@dimen/default_margin"
                    android:text="@{viewModel.movieOverview}"/>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>